syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup.academy.alissonprado;

import "google/protobuf/timestamp.proto";

service RegistraPixService {
  rpc registraPix (RegistraPixRequest) returns (RegistraPixResponse) {}
}

service RemovePixService {
  rpc removePix (RemovePixRequest) returns (RemovePixResponse) {}
}

service PesquisaChavePixService {
  rpc pesquisaPix (PesquisaChavePixRequest) returns (PesquisaChavePixResponse) {}
}

service ListaChavesPixService {
  rpc listaChavesPix (ListaChavesPixRequest) returns (ListaChavesPixResponse) {}
}

message RegistraPixRequest {
  string    idClienteBanco = 1;
  TipoConta tipoConta      = 2;
  TipoChave tipoChave      = 3;
  string    chave          = 4;
}

message RegistraPixResponse {
  string idPix = 1;
}

message RemovePixRequest {
  string idPix          = 1;
  string idClienteBanco = 2;
}

message RemovePixResponse {
  string mensagem = 1;
}

message PesquisaChavePixRequest {
  message FiltroPorPixId {
    string idPix          = 1;
    string idClienteBanco = 2;
  }

  oneof filtro {
    FiltroPorPixId pixId = 1;
    string         chave = 2;
  }
}

message PesquisaChavePixResponse {
  message ChavePix {

    message ContaInfo {
      TipoConta tipo          = 1;
      string    instituicao   = 2;
      string    nomeDoTitular = 3;
      string    cpfDoTitular  = 4;
      string    agencia       = 5;
      string    numeroDaConta = 6;
    }

    TipoChave                 tipo     = 1;
    string                    chave    = 2;
    ContaInfo                 conta    = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string   idPix          = 1;
  string   idClienteBanco = 2;
  ChavePix chave          = 3;
}

message ListaChavesPixRequest {
  string idClienteBanco = 1;
}

message ListaChavesPixResponse {
  string            idClienteBanco = 1;
  repeated ChavePix chaves         = 2;

  message ChavePix{
    string                    idPix     = 1;
    TipoChave                 tipoChave = 2;
    string                    chave     = 3;
    TipoConta                 tipoConta = 4;
    google.protobuf.Timestamp criadaEm  = 5;
  }
}

enum TipoChave {
  CHAVE_DESCONHECIDA = 0;
  CPF                = 1;
  CELULAR            = 2;
  EMAIL              = 3;
  ALEATORIA          = 4;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}